--- a/client/src/app/shop/shop.component.html
+++ b/client/src/app/shop/shop.component.html
@@ -1,6 +1,10 @@
-<h1>Welcome to {{ title }}</h1>
-<ul>
-    <li class="list-unstyled" *ngFor="let product of products">
-        {{product.name}}
-    </li>
-</ul>
+<div class="container">
+    <div class="row">
+        <section class="col-3">
+            Filters
+        </section>
+        <section class="col-9">
+            Main content
+        </section>
+    </div>
+</div>
