--- a/client/src/app/shop/shop.component.html
+++ b/client/src/app/shop/shop.component.html
@@ -1,10 +1,50 @@
 <div class="container">
-    <div class="row">
-        <section class="col-3">
-            Filters
-        </section>
-        <section class="col-9">
-            Main content
-        </section>
-    </div>
+  <div class="row">
+
+    <section class="col-3">
+
+      <h5 class="mt-3 ml-3">Sorts</h5>
+      <select class="custom-select mb-3">
+        <option value="">Alphabetical</option>
+        <option value="">Price: Low to High</option>
+        <option value="">Price: High to Low</option>
+      </select>
+
+      <h5 class="mt-3 ml-3">Brands</h5>
+      <ul class="list-group">
+        <li class="list-group-item" *ngFor="let item of brands">
+            {{ item.name }}
+        </li>
+      </ul>
+
+      <h5 class="mt-3 ml-3">Types</h5>
+      <ul class="list-group">
+        <li class="list-group-item" *ngFor="let item of types">
+            {{ item.name }}
+        </li>
+      </ul>
+    </section>
+
+    <section class="col-9">
+      <div class="d-flex justify-content-between align-items-center pb-2">
+        <header>
+          <span>Showing <strong>10</strong> of <strong>16</strong> results</span>
+        </header>
+
+        <div class="form-inline mt-2">
+          <input type="text" class="form-control" style="width: 300px;" placeholder="Search">
+          <button class="btn btn-outline-primary my-2">Search</button>
+          <button class="btn btn-outline-success ml-2 my-2">Reset</button>
+        </div>
+      </div>
+
+
+      <h3>Main content</h3>
+      <div class="row">
+        <div class="col-md-4 mb-4" *ngFor="let item of products">
+            <app-product-item [product]="item"></app-product-item>
+        </div>
+      </div>
+    </section>
+  </div>
 </div>
