--- a/client/src/app/shop/shop.component.html
+++ b/client/src/app/shop/shop.component.html
@@ -4,22 +4,31 @@
     <section class="col-3">
 
       <h5 class="mt-3 ml-3">Sorts</h5>
-      <select class="custom-select mb-3">
-        <option value="">Alphabetical</option>
-        <option value="">Price: Low to High</option>
-        <option value="">Price: High to Low</option>
+      <select class="custom-select mb-3" (change)="onSortSelected($event.target.value)">
+        <option *ngFor="let opt of sortOptions"
+        [value]="opt.value">
+          {{ opt.name }}
+        </option>
       </select>
 
       <h5 class="mt-3 ml-3">Brands</h5>
       <ul class="list-group">
-        <li class="list-group-item" *ngFor="let item of brands">
+        <li class="list-group-item" 
+            *ngFor="let item of brands"
+            [class.active]="item.id === this.brandIdSelected"
+            [value]="item.id"
+            (click)="onBrandSelected(item.id)">
             {{ item.name }}
         </li>
       </ul>
 
       <h5 class="mt-3 ml-3">Types</h5>
       <ul class="list-group">
-        <li class="list-group-item" *ngFor="let item of types">
+        <li class="list-group-item" 
+            *ngFor="let item of types"
+            [class.active]="item.id === this.typeIdSelected"
+            [value]="item.id"
+            (click)="onTypeSelected(item.id)">
             {{ item.name }}
         </li>
       </ul>
