--- a/client/src/app/shop/shop.component.html
+++ b/client/src/app/shop/shop.component.html
@@ -15,7 +15,7 @@
       <ul class="list-group">
         <li class="list-group-item" 
             *ngFor="let item of brands"
-            [class.active]="item.id === this.brandIdSelected"
+            [class.active]="item.id === this.shopParams.brandId"
             [value]="item.id"
             (click)="onBrandSelected(item.id)">
             {{ item.name }}
@@ -26,7 +26,7 @@
       <ul class="list-group">
         <li class="list-group-item" 
             *ngFor="let item of types"
-            [class.active]="item.id === this.typeIdSelected"
+            [class.active]="item.id === this.shopParams.typeId"
             [value]="item.id"
             (click)="onTypeSelected(item.id)">
             {{ item.name }}
@@ -36,14 +36,19 @@
 
     <section class="col-9">
       <div class="d-flex justify-content-between align-items-center pb-2">
-        <header>
-          <span>Showing <strong>10</strong> of <strong>16</strong> results</span>
-        </header>
+
+        <app-paging-header
+            [totalCount]="totalCount"
+            [pageSize]="this.shopParams.pageSize"
+            [pageNumber]="this.shopParams.pageNumber"
+        >
+
+        </app-paging-header>
 
         <div class="form-inline mt-2">
-          <input type="text" class="form-control" style="width: 300px;" placeholder="Search">
-          <button class="btn btn-outline-primary my-2">Search</button>
-          <button class="btn btn-outline-success ml-2 my-2">Reset</button>
+          <input (keyup.enter)="onSearch()" type="text" class="form-control" #search style="width: 300px;" placeholder="Search">
+          <button (click)="onSearch()" class="btn btn-outline-primary my-2">Search</button>
+          <button (click)="onReset()" class="btn btn-outline-success ml-2 my-2">Reset</button>
         </div>
       </div>
 
@@ -53,6 +58,15 @@
         <div class="col-md-4 mb-4" *ngFor="let item of products">
             <app-product-item [product]="item"></app-product-item>
         </div>
+      </div>
+      <div class="d-flex justify-content-center">
+        <app-pager
+          [pageSize]="shopParams.pageSize"
+          [totalCount]="totalCount"
+          (pageChanged)="onPageChanged($event)"
+        >
+
+        </app-pager>
       </div>
     </section>
   </div>
